Fixed page too wide problem

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,4 +1,7 @@
 html, body, #root, #container {height:100%;}
+*{
+    box-sizing: border-box
+}
 body, #root, #container { 
     background: #ECEFF1; 
     color: rgba(0,0,0,0.87); 
@@ -16,7 +19,8 @@ p, label {
 }
 main {
     width: 100%;
-    height: 100%;
+    height: auto;
+    margin:0px;
     padding: 0;
     display: block;
 }
@@ -43,6 +47,7 @@ label {
     background: rgb(23, 21, 22); 
     height: 10%;
     width: 100%;
+    margin:0px;
     min-height: 50px;
     max-height: 250px;
     padding-left:20px;
